remove apache commons io